fix overlapping elements

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
 }
 
 .Hangman {
-  position: absolute;
   width: 100%;
   top: 20%;
 }
