--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,8 +1,8 @@
 footer {
-  position: absolute;
   height: 10ex;
   padding-top: 35px;
   bottom: 0;
   width: 100%;
   text-align: center;
+  clear: both;
 }
