--- a/src/containers/Header.css
+++ b/src/containers/Header.css
@@ -5,6 +5,9 @@
 
 @media screen and (max-width: 600px) {
   #Header {
-    top: 30%;
+    padding: 0;
+  }
+  #Header > div > h1 {
+    font-size: 5rem;
   }
 }
